# WebpPlayer

./: .gitignore  CHANGELOG.md  README.md  README.zh-CN.md
io/webpkit/player/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
io/webpkit/player/1.0.0/: player-1.0.0-sources.jar.md5  player-1.0.0-sources.jar.sha1  player-1.0.0-sources.jar.sha256  player-1.0.0-sources.jar.sha512  player-1.0.0.aar  player-1.0.0.aar.md5  player-1.0.0.aar.sha1  player-1.0.0.aar.sha256  player-1.0.0.aar.sha512  player-1.0.0.module  player-1.0.0.module.md5  player-1.0.0.module.sha1  player-1.0.0.module.sha256  player-1.0.0.module.sha512  player-1.0.0.pom  player-1.0.0.pom.md5  player-1.0.0.pom.sha1  player-1.0.0.pom.sha256  player-1.0.0.pom.sha512
io/webpkit/player/1.0.5/: player-1.0.5-sources.jar.md5  player-1.0.5-sources.jar.sha1  player-1.0.5-sources.jar.sha256  player-1.0.5-sources.jar.sha512  player-1.0.5.aar  player-1.0.5.aar.md5  player-1.0.5.aar.sha1  player-1.0.5.aar.sha256  player-1.0.5.aar.sha512  player-1.0.5.module  player-1.0.5.module.md5  player-1.0.5.module.sha1  player-1.0.5.module.sha256  player-1.0.5.module.sha512  player-1.0.5.pom  player-1.0.5.pom.md5  player-1.0.5.pom.sha1  player-1.0.5.pom.sha256  player-1.0.5.pom.sha512
webpview/: build.gradle.kts
webpview/src/main/cpp/: CMakeLists.txt
webpview/src/main/java/io/webpkit/player/: MultiWebpGLView.kt  WebPYUVDecoder.kt  WebpDeviceProfile.kt  WebpGLView.kt  WebpLog.kt  WebpRenderer.kt
webpview/src/test/java/io/webpkit/player/: WebpRendererTest.kt
